--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
     repositories {
         jcenter()
         mavenLocal()
-        maven {
-            name = "self"
-            url = uri("$rootDir/localMavenRepository/snapshot")
-        }
+//        maven {
+//            name = "self"
+//            url = uri("$rootDir/localMavenRepository/snapshot")
+//        }
         google()
         mavenCentral()
     }
@@ -15,7 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath project(":sharkplugin")
-        classpath "com.shark:demo:1.0.0"
+//        classpath "com.shark:demo:1.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
