--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ if (ENABLED.toBoolean()) {
 
     upload {
         name 'uploaddedsmo'
+        user {
+            username = "fujie"
+            password = "123456"
+        }
     }
 }
 
